--- a/love/index.html
+++ b/love/index.html
@@ -14,17 +14,21 @@
 <body>
     <div id="drag-container">
         <div id="spin-container">
-            <img src="./images/r1.png" alt="">
-            <img src="./images/r2.png" alt="">
-            <img src="./images/r3.png" alt="">
-            <img src="./images/r4.png" alt="">
-            <img src="./images/r5.jpg" alt="">
-            <img src="./images/r6.png" alt="">
-            <img src="./images/r7.png" alt="">
-            <img src="./images/r8.png" alt="">
-            <img src="./images/r9.png" alt="">
-            <img src="./images/r10.png" alt="">
-            <p>Happy Birthday Rashmii</p>
+          <img src="./images/a1.png" alt="">
+            <img src="./images/a2.jpg" alt="">
+            <img src="./images/a3.jpg" alt="">
+            <img src="./images/a4.png" alt="">
+            <img src="./images/a5.png" alt="">
+            <img src="./images/a6.png" alt="">
+            <img src="./images/a7.png" alt="">
+            <img src="./images/a8.png" alt="">
+            <img src="./images/s1.jpeg" alt="">
+            <img src="./images/s2.jpeg" alt="">
+            <img src="./images/s3.jpeg" alt="">
+            <img src="./images/s4.jpeg" alt="">
+            <img src="./images/s5.jpeg" alt="">
+            <img src="./images/s6.jpeg" alt="">
+            <p>Happy B'day Sanvi baboo</p>
         </div>
         <div id="ground"></div>
     </div>
