--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
 
   <!-- Update title and description for a birthday theme -->
-  <title>HBD 5.0 | Aoudumber Bade</title>
+  <title> 🎉| Ram</title>
   <link rel="icon" type="image/x-icon" href="https://www.palingit.com/favicon.ico" />
   <meta name="description" content="A special birthday greeting" />
 </head>
@@ -52,11 +52,11 @@
       <blockquote id="bq" data-text="💞">
         <!-- Update the messages for a birthday greeting -->
         <p id="kalimat">
-          Happy Birthday, gorgeous! Today is all about celebrating you.
+          Happy day, gorgeous! Today is all about celebrating you.
         </p>
 
         <!-- Message -->
-        <p id="pesan1">Tap here for your birthday surprise! 🎉</p>
+        <p id="pesan1">Tap here for your day surprise! 🎉</p>
         <div id="kolombaru">
           <li id="lv1">🎂</li>
           <li id="lv2">🎁</li>
@@ -66,7 +66,7 @@
 
         <p id="pesan2">You shine brighter every year! ✨</p>
         <p id="pesan3">Do you know what makes today extra special?</p>
-        <p id="pesan4" class="sty2">It’s your birthday!</p>
+        <p id="pesan4" class="sty2">It’s your day!</p>
         <p id="pesan5" class="sty2">
           Today, I wish you a year filled with laughter, love, and unforgettable moments.
         </p>
@@ -86,7 +86,7 @@
     <div id="pesanditolak">
       <img id="stikerditolak" src="https://feeldreams.github.io/weee.gif" />
       <p id="kataditolak">
-        Oops! You can’t skip this birthday magic.
+        Oops! You can’t skip this day magic.
       </p>
     </div>
   </div>
@@ -133,7 +133,7 @@
       });
       if (nama && nama.length < 11) {
         window.nama = nama;
-        vketikhalo = "Happy Birthday, " + nama + "!";
+        vketikhalo = "Happy day, " + nama + "!";
         mulainama();
       } else {
         await Swal.fire({
@@ -145,7 +145,7 @@
       }
     }
 
-    var tanya = "How about we celebrate your birthday in style?";
+    var tanya = "How about we celebrate your day in style?";
     var opstanya = "Your choice is:";
     var tompositif = "Absolutely, let’s celebrate! 🎉";
     var tomnegatif = "Maybe another time";
@@ -160,10 +160,10 @@
         cancelButtonText: "" + tomnegatif,
       });
       if (prtanya) {
-        pesanwhatsapp = "Yes " + nama + ", let the birthday magic begin!";
+        pesanwhatsapp = "Yes " + nama + ", let the day magic begin!";
         menuju();
       } else {
-        pesanwhatsapp = nama + ", don't miss out on the birthday fun!";
+        pesanwhatsapp = nama + ", don't miss out on the day fun!";
         await swalst.fire({
           title: "" + kataditolak.innerHTML,
           timer: 2000,
