--- a/love/index.html
+++ b/love/index.html
@@ -28,7 +28,7 @@
             <img src="./images/s4.jpeg" alt="">
             <img src="./images/s5.jpeg" alt="">
             <img src="./images/s6.jpeg" alt="">
-            <p>Happy B'day Sanvi baboo</p>
+            <p> 🎉 🎉 Sanvi baboo</p>
         </div>
         <div id="ground"></div>
     </div>
